--- a/SumanBudhathoki_HTMLforms.html
+++ b/SumanBudhathoki_HTMLforms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SumanBudhathoki_HTMLforms</title>
-    <link rel="stylesheet" href="SumanBudhathoki_formstyles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- About Me Content (from previous assignment) -->
@@ -88,6 +88,6 @@
         </div>
     </section>
 
-    <script src="SumanBudhathoki_forms.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
